assets/css/style.css
body{
    width: 960px;
    margin: auto;
    font-family: Arial, Helvetica, sans-serif; 
}

header{
    background-color: ##4aaaa5;
    border-color: #cccccc;
    width: 960px;
    height: 90px;
    position: relative;
    border-bottom-width: 2px;
    border-style: solid;
    margin-bottom: 30px;
}



#sectionhead{
    font-family: Georgia, 'Times New Roman', Times, serif;
    background: #ffffff;
    position: absolute;
    color: #4aaaa5;
    height: 60px;
    font-size: 30px;
    font-weight: bold;
    padding-top: 30px;
    padding-right: 30px;
    border-style: solid;
    border-color: #cccccc;
    border-bottom-width: 3px;
    width: 870px;
    margin-bottom: 30px;

}

.my-name{
    color: #ffffff;
    height: 60px;
    width: 250px;
    position: absolute;
    font-size: 30px;
    padding-top: 30px;
    padding-left: 30px;
    background: #4aaaa5;
    font-weight: bold;
    padding-left: 30px;
    padding-right: 30px;
}

.nav li {
    float: right;
    padding-top: 40px;
    margin-left: 10px;
    font-size: 18px;
    
}

.nav a {
    text-decoration: none;
    color: #777777;
    font-family: Arial, Helvetica, sans-serif;
   

}

#mid {
    border-color: #efefef;
    border-width: 2px;
    border-style: solid;
    border-top: none;
    border-bottom: none;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 5px;
    margin-left: 10px;
    margin-right: 10px;
}


section{
    background-color: #ffffff;
    border-color: #dddddd;
    color: #777777; 
    border-width: 1px;
    border-style: solid;
    width: 900px;
    padding-left: 30px;
    padding-right: 30px;
}


img{
    max-width: 150px;
}

.contact-info{
    background-color: #ffffff;
    border-color: #dddddd;
}

.portfolio-links{
    background-color: #ffffff;
    border-color: #dddddd;
}

footer{
    background-color: #666666;
    border-top: 8px solid #4aaaa5;
}

